# openmp_ex

./: .gitignore  CMakeLists.txt  README.md  test.cpp
src/: ex_loop_tiling.cpp  ex_loop_unroll.cpp  ex_rowcol_access.cpp
